--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,5 @@ remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme
 future: true
-remote-theme: cactus
+# theme: landscape
+theme: cactus
